# open-tgi

./: .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: setup-repository.yml
clients/python/: pyproject.toml
server/: pyproject.toml
server/text_generation_server/models/custom_modeling/: flash_llama_modeling.py
template-files/go/: .gitignore
template-files/js/: .gitignore
template-files/python/: .gitignore
template-files/terraform/: terrascan-ci.yml
