[workspace]
members = [
    "benchmark",
    "router",
    "router/client",
    "router/grpc-metadata",
    "launcher"
]

[workspace.package]
version = "0.9.4"
edition = "2021"
authors = ["Yunfeng Bai"]
homepage = "https://github.com/scaleapi/open-tgi"

[profile.release]
debug = 1
incremental = true
lto = "off"
panic = "abort"
